# win-nix-pty

./: LICENSE  README.md
src/PtyClr/: .gitignore  PtyClr.sln
src/PtyClr/PtyClr/: Command.cs  Constants.cs  GlobalSuppressions.cs  Helpers.cs  LogLevel.cs  Pty.cs  PtyBuild.cs  PtyClr.csproj  TerminalCorruptException.cs  WinSize.cs
src/PtyClr/PtyClr/LinApi/: BaudRate.cs  Cc.cs  ControlMode.cs  InputMode.cs  LocalMode.cs  OutputMode.cs  Termios.cs
src/PtyClr/PtyClr/WinApi/: VirtualKey.cs  WinApi_Common.cs  WinApi_ReadWriteConsole.cs
src/PtyClr/Test/: Program.cs  Test.csproj
src/PtyClr/Test/Properties/: AssemblyInfo.cs
src/PtyNative/: .gitignore  CMakeLists.txt  command_processor.cpp  command_processor.h  do_build.cmd  file_helpers.cpp  file_helpers.h  helpers.cpp  helpers.h  includes.h  io_processor.cpp  io_processor.h  logging.cpp  logging.h  main.cpp  main.rc  set_vars.cmd  set_vars_user.sample.cmd  stand_alone_io.cpp  stand_alone_io.h  version.h
